--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <td class="lborder" width="28"></td>
 <td class="maincontent">
 <ul>
-<li class="first">The full moon in June is called a Strawberry Moon</li>
+<li class="first">Полнолуние в июне называется клубничной луной</li>
 <li>Обычно клубника красная, но она бывает и других цветов,
 например, белая разновидность клубники, по вкусу напоминающая ананас</li>
 <li>Клубника богата клетчаткой, калием и витамином С, что делает ее полезной закуской</li>
